# USTB-OpenAI-Py

./: README.md  pyproject.toml
ustb_openai/: __init__.py  _client.py  _exceptions.py  _models.py
ustb_openai/_utils/: __init__.py  form_request_builder.py  openai_stream_adaptor.py
ustb_openai/api_models/: __init__.py  chat_history_info.py  compose_chat.py  compose_detail.py  compose_list.py  page_settings.py  session_delete.py  session_list.py  session_new.py  user_info.py  web_info.py
ustb_openai/resources/: __init__.py
ustb_openai/resources/chat/: __init__.py  chat.py
ustb_openai/resources/chat/completions/: completions.py
ustb_openai/resources/info/: info.py
ustb_openai/types/chat/: chat_completion.py
